--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,78 @@
 .App {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #333333;
+  margin-top: 60px;
+  display: grid;
+}
+
+.header-info {
+  width: 55%;
+  font-weight: lighter;
+  font-size: 17px;
+  margin: 0px 25% 50px 25%;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.form {
+  display: grid;
+}
+.textarea {
+  justify-self: center;
+  padding: 20px;
+  font-size: 15px;
+  font-family: inherit;
+  overflow: scroll;
+  display: block;
+  line-height: 23px;
+  height: 742px;
+  width: 594px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 0px 11px 6px rgba(0, 0, 0, .1);
+  background-image: url('http://www.anasfim.com/p/2018/03/best-photos-of-lined-paper-background-lined-paper-book-lined-intended-for-lined-paper-background-tumblr.jpg');
+  background-size: contain;
+  background-position: center;
+  resize: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.submit-btn {
+  margin-top: 50px;
+  justify-self: center;
+  background-color: white;
+  border: none;
+  border-radius: 8px;
+  width: 150px;
+  box-shadow: 0px 0px 11px 6px rgba(0, 0, 0, .1);
+  height: 50px;
+  font-family: inherit;
+  color: inherit;
+  font-weight: bold;
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+.results {
+  margin-top: 50px;
+  padding: 30px;
+  border-radius: 8px;
+  width: 100%;
+  background-color: rgb(255, 187, 136);
+  justify-self: center;
+}
+
+.results p {
+  margin: 30px;
+  font-weight: bold;
+  font-size: 25px;
   color: white;
+  letter-spacing: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-logo {
+  width: 500px;
+  margin: -100px auto;
+  justify-self: center;
 }
